--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
+*{
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
+
+}
+.App{
   text-align: center;
+  margin-top: 0px;
+}
+.Header{
+  margin: 0px;
+  padding: 0px;
+  width: 50vw;
+  margin-left: 25vw;
+  text-align: justify;
+  margin-bottom: 5vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Nav-bar{
+  background-color: #004181;
+  color: #fff;
+  margin-bottom: 20px;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Header h2{
+  text-align: center;
+  margin: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Heading{
+  
 }
-
-.App-link {
-  color: #61dafb;
+.Indication-For-textarea{
+  margin: 20px;
+  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Ingridients-Capture{
+  border: 1px solid #004181;
+  border-radius: 5px;
+}
+.Submit-button{
+  padding: 12px;
+  margin-top: 10px;
+  background-color: #004181;
+  color: #fff;
 }
