--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0px;
   border: 0px;
   padding: 0px;
+  overflow-x: hidden;
 
 }
 .App{
@@ -45,4 +46,21 @@
   background-color: #004181;
   color: #fff;
 }
-
+.Group-container{
+  display: flex;
+  width: 100vw;
+  max-width: 100vw;
+  flex-wrap: wrap;
+  
+}
+.Groups{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* Rounded corners */
+    width: 300px;
+    margin: auto;
+    position: relative;
+}
+.Groups:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
