--- a/src/App.css
+++ b/src/App.css
@@ -45,22 +45,24 @@
   margin-top: 10px;
   background-color: #004181;
   color: #fff;
-}
-.Group-container{
+}.Group-container {
   display: flex;
-  width: 100vw;
-  max-width: 100vw;
   flex-wrap: wrap;
-  
+  justify-content: space-between;
 }
-.Groups{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px; /* Rounded corners */
-    width: 300px;
-    margin: auto;
-    position: relative;
+
+.Groups {
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  flex-basis: 200px;
+  flex-grow: 1;
+  margin: 10px;
 }
-.Groups:hover{
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+
+/* Make all cards have the same height as the largest card */
+.Group-container {
+  align-items: stretch;
 }
