Every functionality working well with An added fucntionality to download excell

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 }
 .Submit-button{
   padding: 12px;
-  margin-top: 10px;
+  margin: 10px;
   background-color: #004181;
   color: #fff;
 }.Group-container {
