--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,18 @@
 * {
-  margin: 0px;
-  border: 0px;
-  padding: 0px;
+  margin: 0;
+  border: 0;
+  padding: 0;
   overflow-x: hidden;
 }
+
 .App {
   text-align: center;
-  margin-top: 0px;
+  margin-top: 0;
 }
+
 .Header {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   width: 50vw;
   margin-left: 25vw;
   text-align: justify;
@@ -18,7 +20,7 @@
 }
 
 .Nav-bar {
-  background-color: #004181;
+  background-color: #00812f;
   color: #fff;
   margin-bottom: 20px;
   padding: 10px;
@@ -32,20 +34,24 @@
 .Indication-For-textarea {
   margin: 20px;
 }
+
 .Ingridients-Capture {
-  border: 2px solid #004181;
+  border: 2px solid #00812f;
   border-radius: 5px;
 }
+
 .Submit-button {
   padding: 12px;
   margin: 10px;
-  background-color: #004181;
+  background-color: #00812f;
   color: #fff;
 }
+
 .Submit-button:hover {
-  background-color: rgb(104, 139, 168) !important;
+  background-color: rgb(102, 248, 156) !important;
   color: #f8f8f8 !important;
 }
+
 .Group-container {
   display: flex;
   flex-wrap: wrap;
@@ -61,13 +67,24 @@
   flex-basis: 200px;
   flex-grow: 1;
   margin: 10px;
+  overflow-y: hidden;
+}
+
+.img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
 }
 
 /* Make all cards have the same height as the largest card */
 .Group-container {
   align-items: stretch;
 }
-@media only screen and (max-width: 768px){
+.Results {
+  overflow-y: hidden;
+}
+
+@media only screen and (max-width: 768px) {
   .Header {
     width: 90vw;
     margin-left: 5vw;
